1-system/5-harbor/harbor.destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-internal-tls
spec:
  host: harbor.unique.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          sni: harbor.unique.svc.cluster.local
          insecureSkipVerify: true
