1-system/5-harbor/harbor.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    # HPE: harbor.ingress.pcai0201.fr2.hpecolo.net
    - harbor.2.28.18.215.sslip.io
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: harbor.unique.svc.cluster.local
            port:
              number: 443
          headers:
            request:
              set:
                x-forwarded-proto: https
